# TVio

./: .env.example  .env.local.save  .gitignore  ARCHITECTURE.md  BUILD.md  README.md  capacitor.config.ts  firestore.rules  index.html  package-lock.json  package.json  run.ps1  setup-updater.ps1  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
android-src/: ApkUpdater.java  NativePlayer.java  TvioPlayerActivity.java
proxy/: tmdb-worker.js
public/: manifest.webmanifest  sw.js
scripts/: android-exoplayer-patch.mjs  android-signing-patch.mjs  android-tv-manifest.mjs  android-updater-patch.mjs  brand.mjs  gen-android-assets.mjs  gen-icon.mjs  gen-installer-assets.mjs  inject-platform.mjs  sync-version.mjs
src/: index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  playback.rs
src/addons/: manager.ts  match.ts  types.ts
src/components/: AppLayout.tsx  AvatarPicker.tsx  BrandLayout.tsx  BrandStrip.tsx  Button.tsx  CameraScanner.tsx  CastButton.tsx  ChangePassword.tsx  Chip.tsx  DemoBanner.tsx  Dropdown.tsx  FilterPanel.tsx  Hero.tsx  LayoutRow.tsx  Logo.tsx  Navbar.tsx  PairQr.tsx  PlayOnSheet.tsx  PosterActions.tsx  PosterCard.tsx  PosterGrid.tsx  PrefetchToast.tsx  QuickWatch.tsx  QuitDialog.tsx  Row.tsx  SeasonBrowser.tsx  SeasonGrid.tsx  ServiceFilter.tsx  UpdateGate.tsx  UpdateSection.tsx  UpdateToast.tsx  WatchlistToast.tsx  WhatsNew.tsx
src/hooks/: useDeviceProfile.ts  useIptv.ts  useOverlayBack.ts  usePlay.ts  (+1 more)
(+53 files in other folders)
