[package]
name = "tvio"
version = "0.1.0"
description = "TVio desktop"
authors = ["TVio"]
edition = "2021"

# See https://tauri.app for the full Tauri v2 project reference.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
